--- a/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
@@ -2155,3 +2155,5 @@ then {11,99 TRY/Month}*/
 "select_city_district" = "";
 "send_print_popup_no_address" = "";
 "grace_banner_text_paycell" = "";
+"toast_message_delete_notification" = "ამ პროცესს შეიძლება დასჭირდეს დრო, დამოკიდებულია არჩეული ფაილების რაოდენობაზე.";
+"order_approved" = "";
