--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -2169,3 +2169,5 @@ then {11,99 TRY/Month}*/
 "select_city_district" = "";
 "send_print_popup_no_address" = "";
 "grace_banner_text_paycell" = "";
+"toast_message_delete_notification" = "قد تستغرق هذه العملية وقتًا اعتمادًا على عدد الملفات المختارة";
+"order_approved" = "";
