--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2209,9 +2209,11 @@ then {11,99 TRY/Month}*/
 "update_address" = "Adres Güncelle";
 "use_address" = "Adresi Kullan";
 "change_address" = "Adres Değiştir";
-"sent_print_info_popup_title" = "Siparişin Oluşturuldu";
+"sent_print_info_popup_title" = "Fotoğrafların Baskıya Gönderildi.";
 "sent_print_info_popup_body" = "Siparişin hazırlanıyor. Sipariş takibini sipariş detayından yapabilirsin.\n";
 "address_title_placeholder" = "Örnek; Evim, İş Yerim vb.";
 "select_city_district" = "Seçiniz";
 "send_print_popup_no_address" = "Kayıtlı adresiniz bulunmamaktadır.";
 "grace_banner_text_paycell" = "lifebox paketinin yenilenmesi icin Paycell kart bakiyeni ve elektronik ticarete acik oldugunu kontrol edin. Farklı bir kredi kartı ile ya da uygulama üzerinden paket satınalabilirsiniz.";
+"toast_message_delete_notification" = "Bu işlem seçilen dosya adetine göre zaman alabilir.";
+"order_approved" = "Siparişin Onaylandı";
