LB-4433 photo print foryou screen added LB-4432 photo print detail popup added LB-4412 photo print foryou see all screen added

--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -2145,29 +2145,49 @@ then {11,99 TRY/Month}*/
 "print_cancel_popup_info" = "سيتم حذف جميع تعديلات الصور التي حددتها للألبوم المطبوع. سوف تحتاج إلى تحديد وتحرير الصور مرة أخرى.";
 "no_right_print_popup_title" = "لقد استخدمت حقك في الطباعة";
 "no_right_print_popup_info" = "لقد استخدمت حق طباعة الصور المضمنة في الحزمة الخاصة بك. عندما يتم تجديد الحزمة الخاصة بك ، يمكنك إرسال صورك للطباعة مرة أخرى.";
-"send_print_button" = "";
-"add_address" = "";
-"send_print_popup_title" = "";
-"send_print_popup_address" = "";
-"send_print_popup_info" = "";
-"address_title" = "";
-"address_city" = "";
-"address_district" = "";
-"address_neighbourhood" = "";
-"address_street" = "";
-"address_building_no" = "";
-"address_apartment_no" = "";
-"address_postacode" = "";
-"add_saved_my_address" = "";
-"save_address" = "";
-"update_address" = "";
-"use_address" = "";
-"change_address" = "";
-"sent_print_info_popup_title" = "";
-"sent_print_info_popup_body" = "";
-"address_title_placeholder" = "";
-"select_city_district" = "";
-"send_print_popup_no_address" = "";
-"grace_banner_text_paycell" = "";
+"send_print_button" = "إرسال للطباعة";
+"add_address" = "إضافة عنوان";
+"send_print_popup_title" = "الصور التي قمت بتحديدها جاهزة للطباعة";
+"send_print_popup_address" = "سيتم إرسال الصور المطبوعة إلى العنوان \"%@ ربع %@ شارع رقم.:%@ شقة:%@ %@/%@, %d\".";
+"send_print_popup_info" = "بعد إرسالها للطباعة ، لا يمكن إلغاء هذه العملية.";
+"address_title" = "أدخل عنوان العنوان";
+"address_city" = "مدينة";
+"address_district" = "منطقة";
+"address_neighbourhood" = "الربع";
+"address_street" = "الطريق/الشارع";
+"address_building_no" = "رقم المنزل.";
+"address_apartment_no" = "رقم الشقة.";
+"address_postacode" = "الرمز البريدي";
+"add_saved_my_address" = "أضف إلى العناوين المحفوظة.";
+"save_address" = "حفظ العنوان";
+"update_address" = "تحرير العنوان";
+"use_address" = "استخدم العنوان";
+"change_address" = "تغيير العنوان";
+"sent_print_info_popup_title" = "تم إرسال صورك للطباعة";
+"sent_print_info_popup_body" = "طلبك هو في عملية التحضير. يمكنك متابعة تنفيذ الأمر من تفاصيل الطلب.";
+"address_title_placeholder" = "مثال ، منزلي ، وظيفتي ، إلخ.";
+"select_city_district" = "اختر";
+"send_print_popup_no_address" = "ليس لديك عنوان محفوظ.";
+"grace_banner_text_paycell" = "لتحديث lifebox الحزمة ، تحقق من رصيد بطاقة Paycell وتأكد من أنها مفتوحة للتجارة الإلكترونية. يمكنك شراء الحزمة ببطاقة ائتمان أخرى أو من خلال التطبيق.";
 "toast_message_delete_notification" = "قد تستغرق هذه العملية وقتًا اعتمادًا على عدد الملفات المختارة";
-"order_approved" = "";
+"order_approved" = "تمت الموافقة على طلبك";
+"print_card_title" = "حزمة الطباعة الخاصة بالنسبة لك";
+"print_card_body" = "5 مطبوعات للصور شهريا + 50 جيجابايت من مساحة القرص كهدية";
+"order_in_progress" = "طلبك قيد التقدم";
+"order_delivered_cargo" = "تم إرسال طلبك";
+"order_delivered" = "تم تسليم طلبك";
+"order_undelivered" = "فشل في تسليم طلبك";
+"grace_banner_paycell_text" = "";
+"order_detail_popup_name" = "تتبع أمر الطباعة";
+"print_order_number" = "رقم الطلب: %@";
+"print_cargo_number" = "رقم تسليم الطلب: %@";
+"print_cargo_name" = "اسم شركة النقل: %@";
+"order_approved_detail" = "تم استلام طلب الطباعة الخاص بك للتحضير.";
+"order_in_progress_detail" = "لقد دخل أمر الطباعة الخاص بك مرحلة التصنيع.";
+"order_delivered_cargo_detail" = "تم نقل طلب الطباعة الخاص بك إلى حملة الشحن للتسليم.";
+"order_delivered_detail" = "تم تسليم طلب الطباعة الخاص بك.";
+"order_undelivered_detail" = "تعذر تسليم طلب الطباعة الخاص بك.";
+"print_receipt_name" = "";
+"print_receipt_name_placeholder" = "";
+"min_posta_code" = "";
+"errorcode_5111" = "";
