--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -2133,29 +2133,49 @@ then {11,99 TRY/Month}*/
 "print_cancel_popup_info" = "Alle Fotobearbeitungen, die Sie für das gedruckte Album ausgewählt haben, werden gelöscht. Sie müssen die Fotos erneut auswählen und bearbeiten.";
 "no_right_print_popup_title" = "Sie haben Ihr Recht zum Drucken genutzt";
 "no_right_print_popup_info" = "Sie haben das in Ihrem Paket enthaltene Recht zum Fotodruck genutzt. Wenn Ihr Paket erneuert wird, können Sie Ihre Fotos erneut zum Drucken einsenden.";
-"send_print_button" = "";
-"add_address" = "";
-"send_print_popup_title" = "";
-"send_print_popup_address" = "";
-"send_print_popup_info" = "";
-"address_title" = "";
-"address_city" = "";
-"address_district" = "";
-"address_neighbourhood" = "";
-"address_street" = "";
-"address_building_no" = "";
-"address_apartment_no" = "";
-"address_postacode" = "";
-"add_saved_my_address" = "";
-"save_address" = "";
-"update_address" = "";
-"use_address" = "";
-"change_address" = "";
-"sent_print_info_popup_title" = "";
-"sent_print_info_popup_body" = "";
-"address_title_placeholder" = "";
-"select_city_district" = "";
-"send_print_popup_no_address" = "";
-"grace_banner_text_paycell" = "";
+"send_print_button" = "Zum Drucken Senden";
+"add_address" = "Adresse Hinzufügen";
+"send_print_popup_title" = "Ihre ausgewählten Fotos sind bereit zum Drucken";
+"send_print_popup_address" = "Die gedruckten Fotos werden an die Adresse \"%@ Viertel %@ Straße:%@ Wohnung:%@ %@/%@, %d\" gesendet.";
+"send_print_popup_info" = "Dieser Vorgang kann nicht mehr rückgängig gemacht werden, sobald er zum Druck gesendet wurde.";
+"address_title" = "Adresse Titel";
+"address_city" = "Stadt";
+"address_district" = "Bezirk";
+"address_neighbourhood" = "Viertel";
+"address_street" = "Avenue/Straße";
+"address_building_no" = "Gebäude Nr.";
+"address_apartment_no" = "Wohnung Nr.";
+"address_postacode" = "Postleitzahl";
+"add_saved_my_address" = "Zu meinen gespeicherten Adressen hinzufügen.";
+"save_address" = "Adresse Speichern";
+"update_address" = "Adresse Aktualisieren";
+"use_address" = "Adresse Verwenden";
+"change_address" = "Adresse Ändern";
+"sent_print_info_popup_title" = "Ihre Fotos wurden zum Druck gesendet";
+"sent_print_info_popup_body" = "Ihr Auftrag wird gerade vorbereitet. Sie können den Fortschritt Ihrer Bestellung in den Auftragsdetails verfolgen.";
+"address_title_placeholder" = "Beispiel: Mein Zuhause, Mein Arbeitsplatz usw.";
+"select_city_district" = "Wählen Sie";
+"send_print_popup_no_address" = "Sie haben keine gespeicherte Adresse.";
+"grace_banner_text_paycell" = "Um Ihr lifebox-Paket aufzurüsten, überprüfen Sie Ihr Paycell-Kartenguthaben und stellen Sie sicher, dass es für den elektronischen Handel offen ist. Sie können das Paket mit einer anderen Kreditkarte oder über die App kaufen.";
 "toast_message_delete_notification" = "Dieser Vorgang kann je nach Anzahl der ausgewählten Dateien einige Zeit in Anspruch nehmen.";
-"order_approved" = "";
+"order_approved" = "Ihr Auftrag Genehmigt";
+"print_card_title" = "Spezielles Druckpaket für Sie";
+"print_card_body" = "5 Fotodrucke pro Monat + 50 GB Speicherplatz als Geschenk";
+"order_in_progress" = "Ihre Bestellung befindet sich im Abwicklungsprozess";
+"order_delivered_cargo" = "Ihre Bestellung wurde versandt";
+"order_delivered" = "Ihre Bestellung wurde ausgeliefert";
+"order_undelivered" = "Ihre Bestellung konnte nicht zugestellt werden";
+"grace_banner_paycell_text" = "";
+"order_detail_popup_name" = "Auftragsverfolgung Drucken";
+"print_order_number" = "Bestellnummer: %@";
+"print_cargo_number" = "Bestellnummer für die Lieferung: %@";
+"print_cargo_name" = "Name des Frachtunternehmens: %@";
+"order_approved_detail" = "Ihr Druckauftrag ist zur Vorbereitung eingegangen.";
+"order_in_progress_detail" = "Ihr Druckauftrag ist in der Produktionsphase.";
+"order_delivered_cargo_detail" = "Ihr Druckauftrag wurde zur Auslieferung an die Fracht geschickt.";
+"order_delivered_detail" = "Ihr Druckauftrag wurde ausgeliefert.";
+"order_undelivered_detail" = "Ihr Druckauftrag konnte nicht zugestellt werden.";
+"print_receipt_name" = "";
+"print_receipt_name_placeholder" = "";
+"min_posta_code" = "";
+"errorcode_5111" = "";
