--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2195,29 +2195,49 @@ then {11,99 TRY/Month}*/
 "print_cancel_popup_info" = "All photo edits you have selected for the printed album will be deleted. You will need to select and edit photos again.";
 "no_right_print_popup_title" = "You've used your right to print";
 "no_right_print_popup_info" = "You have used the photo printing right included in your package. When your package is renewed, you can send your photos for printing again.";
-"send_print_button" = "";
-"add_address" = "";
-"send_print_popup_title" = "";
-"send_print_popup_address" = "";
-"send_print_popup_info" = "";
-"address_title" = "";
-"address_city" = "";
-"address_district" = "";
-"address_neighbourhood" = "";
-"address_street" = "";
-"address_building_no" = "";
-"address_apartment_no" = "";
-"address_postacode" = "";
-"add_saved_my_address" = "";
-"save_address" = "";
-"update_address" = "";
-"use_address" = "";
-"change_address" = "";
-"sent_print_info_popup_title" = "";
-"sent_print_info_popup_body" = "";
-"address_title_placeholder" = "";
-"select_city_district" = "";
-"send_print_popup_no_address" = "";
-"grace_banner_text_paycell" = "";
+"send_print_button" = "Send to Print";
+"add_address" = "Add Address";
+"send_print_popup_title" = "Your Selected Photos Are Ready For Printing";
+"send_print_popup_address" = "Printed photographs will be sent to the address \"%@ Quarter %@ Street No:%@ Apartment:%@ %@/%@, %d\".";
+"send_print_popup_info" = "This process cannot be cancelled if it is sent for printing.";
+"address_title" = "Address Title";
+"address_city" = "City";
+"address_district" = "District";
+"address_neighbourhood" = "Quarter";
+"address_street" = "Road/Street";
+"address_building_no" = "Building No";
+"address_apartment_no" = "Apartment No";
+"address_postacode" = "Postcode";
+"add_saved_my_address" = "Add to my saved addresses.";
+"save_address" = "Save Address";
+"update_address" = "Update Address";
+"use_address" = "Use Address";
+"change_address" = "Change Address";
+"sent_print_info_popup_title" = "Your Photos Are Sent For Printing.";
+"sent_print_info_popup_body" = "Your order is being prepared. You can follow the order from the order detail.";
+"address_title_placeholder" = "Example; My Home, My Workplace etc.";
+"select_city_district" = "Select";
+"send_print_popup_no_address" = "You do not have a saved address.";
+"grace_banner_text_paycell" = "To renew your lifebox package, check your Paycell card balance and that card is open for electronic commerce. You can purchase a package with a different credit card or through the application.";
 "toast_message_delete_notification" = "This process may take time depending on the number of files selected.";
-"order_approved" = "";
+"order_approved" = "Your Order Approved";
+"print_card_title" = "Special Print Package for You";
+"print_card_body" = "5 photo prints per month +50GB storage space for free";
+"order_in_progress" = "Your Order In Progress";
+"order_delivered_cargo" = "Your Order Delivered to Cargo";
+"order_delivered" = "Your Order Delivered";
+"order_undelivered" = "Your Order Could Not Be Delivered";
+"grace_banner_paycell_text" = "";
+"order_detail_popup_name" = "Print Order Tracking";
+"print_order_number" = "Order No: %@";
+"print_cargo_number" = "Cargo Delivery No: %@";
+"print_cargo_name" = "Cargo Company Name: %@";
+"order_approved_detail" = "Your printing order is received for preparation.";
+"order_in_progress_detail" = "Your print order is entered the preparation stage.";
+"order_delivered_cargo_detail" = "Your print order is sent to the cargo for delivery.";
+"order_delivered_detail" = "Your print order is delivered.";
+"order_undelivered_detail" = "Your print order could not be delivered.";
+"print_receipt_name" = "";
+"print_receipt_name_placeholder" = "";
+"min_posta_code" = "";
+"errorcode_5111" = "";
