--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2175,29 +2175,49 @@ then {11,99 TRY/Month}*/
 "print_cancel_popup_info" = "Se borrarán todas las ediciones de fotos que hayas seleccionado para el álbum impreso. Tendrás que volver a seleccionar y editar las fotos.";
 "no_right_print_popup_title" = "Ha Utilizado su Derecho a Imprimir";
 "no_right_print_popup_info" = "Ha utilizado el derecho de impresión de fotos incluido en su paquete. Cuando se renueve su paquete, puede enviar sus fotos para imprimir nuevamente.";
-"send_print_button" = "";
-"add_address" = "";
-"send_print_popup_title" = "";
-"send_print_popup_address" = "";
-"send_print_popup_info" = "";
-"address_title" = "";
-"address_city" = "";
-"address_district" = "";
-"address_neighbourhood" = "";
-"address_street" = "";
-"address_building_no" = "";
-"address_apartment_no" = "";
-"address_postacode" = "";
-"add_saved_my_address" = "";
-"save_address" = "";
-"update_address" = "";
-"use_address" = "";
-"change_address" = "";
-"sent_print_info_popup_title" = "";
-"sent_print_info_popup_body" = "";
-"address_title_placeholder" = "";
-"select_city_district" = "";
-"send_print_popup_no_address" = "";
-"grace_banner_text_paycell" = "";
+"send_print_button" = "Enviar a Imprimir";
+"add_address" = "Añadir Dirección";
+"send_print_popup_title" = "Sus fotos seleccionadas están listas para imprimir";
+"send_print_popup_address" = "Las fotos impresas se enviarán a \"%@ Barrio %@ Calle Nº:%@ Apartamento:%@ %@/%@, %d\".";
+"send_print_popup_info" = "Una vez enviadas a imprimir, este proceso no se puede cancelar.";
+"address_title" = "Dirección Título";
+"address_city" = "Ciudad";
+"address_district" = "Distrito";
+"address_neighbourhood" = "Barrio";
+"address_street" = "Avenida/Calle";
+"address_building_no" = "Nº Casa";
+"address_apartment_no" = "Nº Apartamento";
+"address_postacode" = "Código Postal";
+"add_saved_my_address" = "Añadir a mis direcciones guardadas.";
+"save_address" = "Guardar Dirección";
+"update_address" = "Actualizar Dirección";
+"use_address" = "Usar Dirección";
+"change_address" = "Cambiar Dirección";
+"sent_print_info_popup_title" = "Sus fotos han sido enviadas a imprimir.";
+"sent_print_info_popup_body" = "Sus fotos han sido enviadas para imprimir. Puede seguir el progreso de su pedido desde los detalles del pedido.";
+"address_title_placeholder" = "Ejemplo: Mi Casa, Mi Trabajo, etc.";
+"select_city_district" = "Seleccione";
+"send_print_popup_no_address" = "No tienes una dirección guardada.";
+"grace_banner_text_paycell" = "Para actualizar tu paquete lifebox, comprueba el saldo de tu tarjeta Paycell y asegúrate de que está abierta para el comercio electrónico. Puedes comprar el paquete con otra tarjeta de crédito o a través de la app.";
 "toast_message_delete_notification" = "Este proceso puede tardar dependiendo del número de archivos seleccionados.";
-"order_approved" = "";
+"order_approved" = "Su Pedido Aprobado";
+"print_card_title" = "Paquete de Imprimir especial para ti";
+"print_card_body" = "5 fotografías a imprimir al mes +50 GB de espacio de almacenamiento gratis";
+"order_in_progress" = "Su Pedido está en Proceso de Cumplimentación";
+"order_delivered_cargo" = "Su Pedido Enviado";
+"order_delivered" = "Su Pedido Entregado";
+"order_undelivered" = "Su pedido no se ha podido entregar";
+"grace_banner_paycell_text" = "";
+"order_detail_popup_name" = "Seguimiento del pedido de impresión";
+"print_order_number" = "Nº de pedido: %@";
+"print_cargo_number" = "Nº de entrega del pedido: %@";
+"print_cargo_name" = "Nombre de la empresa de carga: %@";
+"order_approved_detail" = "Su pedido de imprimir se ha recibido para su preparación.";
+"order_in_progress_detail" = "Su pedido de imprimir ha entrado en la fase de producción.";
+"order_delivered_cargo_detail" = "Su pedido de imprimir ha sido transferido al servicio de entrega.";
+"order_delivered_detail" = "Su pedido de imprimir ha sido entregado.";
+"order_undelivered_detail" = "Su pedido de imprimir no ha podido ser entregado.";
+"print_receipt_name" = "";
+"print_receipt_name_placeholder" = "";
+"min_posta_code" = "";
+"errorcode_5111" = "";
