--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2438,29 +2438,49 @@ then {11,99 TRY/Month}*/
 "print_cancel_popup_info" = "Toutes les modifications de photos que vous avez sélectionnées pour l'album imprimé seront supprimées. Vous devrez à nouveau sélectionner et modifier les photos.";
 "no_right_print_popup_title" = "Vous Avez Utilisé Votre Droit d'Impression";
 "no_right_print_popup_info" = "Vous avez utilisé le droit d'impression de photos inclus dans votre forfait. Lorsque votre forfait sera renouvelé, vous pourrez à nouveau envoyer vos photos pour qu'elles soient imprimées.";
-"send_print_button" = "";
-"add_address" = "";
-"send_print_popup_title" = "";
-"send_print_popup_address" = "";
-"send_print_popup_info" = "";
-"address_title" = "";
-"address_city" = "";
-"address_district" = "";
-"address_neighbourhood" = "";
-"address_street" = "";
-"address_building_no" = "";
-"address_apartment_no" = "";
-"address_postacode" = "";
-"add_saved_my_address" = "";
-"save_address" = "";
-"update_address" = "";
-"use_address" = "";
-"change_address" = "";
-"sent_print_info_popup_title" = "";
-"sent_print_info_popup_body" = "";
-"address_title_placeholder" = "";
-"select_city_district" = "";
-"send_print_popup_no_address" = "";
-"grace_banner_text_paycell" = "";
+"send_print_button" = "Envoyer à l'impression";
+"add_address" = "Ajouter une Adresse";
+"send_print_popup_title" = "Les photos sélectionnées sont prêtes à être imprimées";
+"send_print_popup_address" = "Les photos imprimées seront envoyées à l'adresse \"%@ Quartier %@ Rue No:%@ Appartement:%@ %@/%@, %d\".";
+"send_print_popup_info" = "Il n'est pas possible d'annuler ce processus lorsqu'il est envoyé à l'impression.";
+"address_title" = "Adresse Titre";
+"address_city" = "Ville";
+"address_district" = "District";
+"address_neighbourhood" = "Quartier";
+"address_street" = "Route/Rue";
+"address_building_no" = "Bâtiment No";
+"address_apartment_no" = "Appartement No";
+"address_postacode" = "Code Postal";
+"add_saved_my_address" = "Ajouter à mes adresses sauvegardées.";
+"save_address" = "Sauvegarder l'adresse";
+"update_address" = "Mettre à jour l'adresse";
+"use_address" = "Utiliser l'adresse";
+"change_address" = "Modifier l'adresse";
+"sent_print_info_popup_title" = "Vos photos ont été envoyées pour impression.";
+"sent_print_info_popup_body" = "Votre commande est en cours de préparation. Vous pouvez suivre l'évolution de votre commande à partir des détails de la commande.";
+"address_title_placeholder" = "Exemple : Ma Maison, Mon Travail, etc.";
+"select_city_district" = "Sélectionner";
+"send_print_popup_no_address" = "Vous n'avez pas d'adresse enregistrée.";
+"grace_banner_text_paycell" = "Pour renouveler votre pack lifebox, vérifiez le solde de votre carte Paycell et que cette carte est ouverte au commerce électronique. Vous pouvez acheter un paquet avec une autre carte de crédit ou par l'intermédiaire de l'application.";
 "toast_message_delete_notification" = "Ce processus peut prendre du temps en fonction du nombre de fichiers sélectionnés.";
-"order_approved" = "";
+"order_approved" = "Votre commande approuvée";
+"print_card_title" = "Forfait d'impression spécial pour vous";
+"print_card_body" = "5 impressions de photos par mois + 50 Go d'espace de stockage en cadeau";
+"order_in_progress" = "Votre commande est en cours d'exécution";
+"order_delivered_cargo" = "Votre commande a été envoyée";
+"order_delivered" = "Votre commande a été livrée";
+"order_undelivered" = "Votre commande n'a pas pu être livrée";
+"grace_banner_paycell_text" = "";
+"order_detail_popup_name" = "Suivi de la commande d'impression";
+"print_order_number" = "Numéro de commande : %@";
+"print_cargo_number" = "Numéro de livraison de la commande : %@";
+"print_cargo_name" = "Nom de l'entreprise de livraison : %@";
+"order_approved_detail" = "Votre commande d'impression a été reçue pour préparation.";
+"order_in_progress_detail" = "Votre commande d'impression est entrée dans la phase de production.";
+"order_delivered_cargo_detail" = "Votre commande d'impression a été expédiée pour livraison.";
+"order_delivered_detail" = "Votre commande d'impression a été livrée.";
+"order_undelivered_detail" = "Votre commande d'impression n'a pas pu être livrée.";
+"print_receipt_name" = "";
+"print_receipt_name_placeholder" = "";
+"min_posta_code" = "";
+"errorcode_5111" = "";
