--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -2133,29 +2133,49 @@ then {11,99 TRY/Month}*/
 "print_cancel_popup_info" = "Toate editările de fotografii pe care le-ați selectat pentru albumul tipărit vor fi șterse. Va trebui să selectați și să editați din nou fotografiile.";
 "no_right_print_popup_title" = "V-ați folosit dreptul de a imprima";
 "no_right_print_popup_info" = "Ați utilizat dreptul de imprimare a fotografiilor inclus în pachetul dvs. La reînnoirea pachetului dvs. puteți trimite din nou fotografiile pentru imprimare.";
-"send_print_button" = "";
-"add_address" = "";
-"send_print_popup_title" = "";
-"send_print_popup_address" = "";
-"send_print_popup_info" = "";
-"address_title" = "";
-"address_city" = "";
-"address_district" = "";
-"address_neighbourhood" = "";
-"address_street" = "";
-"address_building_no" = "";
-"address_apartment_no" = "";
-"address_postacode" = "";
-"add_saved_my_address" = "";
-"save_address" = "";
-"update_address" = "";
-"use_address" = "";
-"change_address" = "";
-"sent_print_info_popup_title" = "";
-"sent_print_info_popup_body" = "";
-"address_title_placeholder" = "";
-"select_city_district" = "";
-"send_print_popup_no_address" = "";
-"grace_banner_text_paycell" = "";
+"send_print_button" = "Trimite la Imprimare";
+"add_address" = "Adăugați Adresa";
+"send_print_popup_title" = "Fotografiile selectate sunt pregătite pentru imprimare";
+"send_print_popup_address" = "Fotografiile imprimate vor fi trimise la adresa \"%@ Cartier %@ Stradă No:%@ Apartment:%@ %@/%@, %d\".";
+"send_print_popup_info" = "Acest proces nu poate fi anulat dacă fotografiile sunt trimise pentru imprimare.";
+"address_title" = "Titlul Adresei";
+"address_city" = "Orașul";
+"address_district" = "Districtul";
+"address_neighbourhood" = "Cartier";
+"address_street" = "Bulevard/Stradă";
+"address_building_no" = "Clădirea №";
+"address_apartment_no" = "Apartament №";
+"address_postacode" = "Cod Poștal";
+"add_saved_my_address" = "Adăugați la adresele mele salvate.";
+"save_address" = "Salvați Adresa";
+"update_address" = "Actualizați Adresa";
+"use_address" = "Utilizați Această Adresă";
+"change_address" = "Schimbare Adresa";
+"sent_print_info_popup_title" = "Fotografiile dvs. au fost trimise pentru imprimare.";
+"sent_print_info_popup_body" = "Comanda dvs. este în curs de pregătire. Puteți urmări comanda din detaliile comenzii.";
+"address_title_placeholder" = "Exemplu; Casa Mea, Muncă Mea etc.";
+"select_city_district" = "Selectați";
+"send_print_popup_no_address" = "Nu aveți o adresă salvată.";
+"grace_banner_text_paycell" = "Pentru a vă actualiza pachetul lifebox, verificați soldul cardului Paycell și asigurați-vă că este deschis pentru comerțul electronic. Puteți achiziționa pachetul cu un alt card de credit sau prin intermediul aplicației.";
 "toast_message_delete_notification" = "Acest proces poate dura în funcție de numărul de fișiere selectate.";
-"order_approved" = "";
+"order_approved" = "Comanda dvs. a fost primită";
+"print_card_title" = "Pachet de imprimare special pentru dvs.";
+"print_card_body" = "5 imprimări foto pe lună +50GB spațiu de stocare gratuit";
+"order_in_progress" = "Comanda dvs. în pregătire";
+"order_delivered_cargo" = "Comanda dvs. a fost expediată";
+"order_delivered" = "Comanda dvs. este livrată";
+"order_undelivered" = "Comanda dvs. nu a putut fi livrată";
+"grace_banner_paycell_text" = "";
+"order_detail_popup_name" = "Urmărirea comenzii de imprimare";
+"print_order_number" = "Comandă №: %@";
+"print_cargo_number" = "Livrare marfă №: %@";
+"print_cargo_name" = "Numele companiei de transport: %@";
+"order_approved_detail" = "Comanda dvs. de tipărire a fost primită pentru pregătire.";
+"order_in_progress_detail" = "Comanda dvs. de tipărire a intrat în etapa de pregătire.";
+"order_delivered_cargo_detail" = "Comanda dvs. de imprimare a fost expediată pentru livrare.";
+"order_delivered_detail" = "Comanda dvs. de imprimare a fost livrată.";
+"order_undelivered_detail" = "Comanda dvs. de imprimare nu a putut fi livrată.";
+"print_receipt_name" = "";
+"print_receipt_name_placeholder" = "";
+"min_posta_code" = "";
+"errorcode_5111" = "";
