--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2176,29 +2176,49 @@ then {11,99 TRY/Month}*/
 "print_cancel_popup_info" = "Të gjitha redaktimet e fotografive që keni zgjedhur për albumin e shtypur do të fshihen. Do t'ju duhet të zgjidhni dhe modifikoni përsëri fotot.";
 "no_right_print_popup_title" = "Ju Keni Përdorur të Drejtën Tuaj Për të Printuar";
 "no_right_print_popup_info" = "Ju keni përdorur të drejtën e printimit të fotografive të përfshira në paketën tuaj. Kur paketa juaj të rinovohet, mund t'i dërgoni sërish fotot tuaja për printim.";
-"send_print_button" = "";
-"add_address" = "";
-"send_print_popup_title" = "";
-"send_print_popup_address" = "";
-"send_print_popup_info" = "";
-"address_title" = "";
-"address_city" = "";
-"address_district" = "";
-"address_neighbourhood" = "";
-"address_street" = "";
-"address_building_no" = "";
-"address_apartment_no" = "";
-"address_postacode" = "";
-"add_saved_my_address" = "";
-"save_address" = "";
-"update_address" = "";
-"use_address" = "";
-"change_address" = "";
-"sent_print_info_popup_title" = "";
-"sent_print_info_popup_body" = "";
-"address_title_placeholder" = "";
-"select_city_district" = "";
-"send_print_popup_no_address" = "";
-"grace_banner_text_paycell" = "";
+"send_print_button" = "Dërgo Për Të Shtypur";
+"add_address" = "Shtoni Adresën";
+"send_print_popup_title" = "Fotot Tuaja Të Zgjedhura Janë Gati Për Shtypje";
+"send_print_popup_address" = "Fotografitë e shtypura do të dërgohen në adresën \"%@ Tremujori %@ Rruga Nr:%@ Apartamenti:%@ %@/%@, %d\".";
+"send_print_popup_info" = "Pasi të dërgohet në shtyp, ky proces nuk mund të anulohet.";
+"address_title" = "Titulli I Adresës";
+"address_city" = "Qyteti";
+"address_district" = "Distrikti";
+"address_neighbourhood" = "Tremujori";
+"address_street" = "Avenue/Rruga";
+"address_building_no" = "Ndërtesa Nr";
+"address_apartment_no" = "Apartamenti Nr";
+"address_postacode" = "Kodi Postar";
+"add_saved_my_address" = "Shtoni në adresat e mia të ruajtura.";
+"save_address" = "Ruaj Adresën";
+"update_address" = "Redakto Adresën";
+"use_address" = "Përdorni Adresën";
+"change_address" = "Ndryshoni Adresën";
+"sent_print_info_popup_title" = "Fotot Tuaja Janë Dërguar Për Printim.";
+"sent_print_info_popup_body" = "Porosia juaj po përgatitet. Ju mund ta ndiqni porosinë nga detajet e porosisë.";
+"address_title_placeholder" = "Shembull; Shtëpia Ime, Puna Ime, etj.";
+"select_city_district" = "Zgjidhni";
+"send_print_popup_no_address" = "Ju nuk keni një adresë të ruajtur.";
+"grace_banner_text_paycell" = "Për të përmirësuar paketën lifebox, kontrolloni bilancin e kartës Suaj Paycell dhe sigurohuni që ajo të jetë e hapur për tregtinë elektronike. Ju mund ta blini paketën me një kartë krediti tjetër ose përmes aplikacionit.";
 "toast_message_delete_notification" = "Ky proces mund të marrë kohë në varësi të numrit të skedarëve të zgjedhur.";
-"order_approved" = "";
+"order_approved" = "Urdhri Juaj Është Miratuar";
+"print_card_title" = "Paketë Speciale Printimi Për Ju";
+"print_card_body" = "5 printime fotografish në muaj +50 GB hapësirë ruajtëse falas";
+"order_in_progress" = "Porosia juaj Është Në Proces";
+"order_delivered_cargo" = "Porosia Juaj Është Dërguar";
+"order_delivered" = "Porosia Juaj Është Dorëzuar";
+"order_undelivered" = "Porosia Juaj Nuk Mund Të Dorëzohet";
+"grace_banner_paycell_text" = "";
+"order_detail_popup_name" = "Ndjekja E Një Porosie Të Shtypur";
+"print_order_number" = "Numri I Porosisë: %@";
+"print_cargo_number" = "Numri I Dorëzimit Të Porosisë: %@";
+"print_cargo_name" = "Emri I Kompanisë Së Transportit: %@";
+"order_approved_detail" = "Porosia juaj e shtypjes është marrë për përgatitje.";
+"order_in_progress_detail" = "Porosia juaj e shtypjes ka hyrë në fazën e prodhimit.";
+"order_delivered_cargo_detail" = "Porosia juaj e printimit është dorëzuar në shërbimin e transportit për dërgesë.";
+"order_delivered_detail" = "Porosia juaj e printimit është dorëzuar.";
+"order_undelivered_detail" = "Porosia juaj e printimit nuk mund të dorëzohej.";
+"print_receipt_name" = "";
+"print_receipt_name_placeholder" = "";
+"min_posta_code" = "";
+"errorcode_5111" = "";
