--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2135,29 +2135,49 @@ then {11,99 TRY/Month}*/
 "print_cancel_popup_info" = "Всі редагування фотографій, які ви вибрали для друкованого альбому, будуть видалені. Вам потрібно буде вибрати та відредагувати фотографії знову.";
 "no_right_print_popup_title" = "Ви використали Право на Друк";
 "no_right_print_popup_info" = "Ви використали право на друк фотографій, що входить до вашого пакету. Коли ваш пакет буде поновлено, ви зможете знову надсилати фотографії на друк.";
-"send_print_button" = "";
-"add_address" = "";
-"send_print_popup_title" = "";
-"send_print_popup_address" = "";
-"send_print_popup_info" = "";
-"address_title" = "";
-"address_city" = "";
-"address_district" = "";
-"address_neighbourhood" = "";
-"address_street" = "";
-"address_building_no" = "";
-"address_apartment_no" = "";
-"address_postacode" = "";
-"add_saved_my_address" = "";
-"save_address" = "";
-"update_address" = "";
-"use_address" = "";
-"change_address" = "";
-"sent_print_info_popup_title" = "";
-"sent_print_info_popup_body" = "";
-"address_title_placeholder" = "";
-"select_city_district" = "";
-"send_print_popup_no_address" = "";
-"grace_banner_text_paycell" = "";
+"send_print_button" = "Відправити на Друк";
+"add_address" = "Додати Адресу";
+"send_print_popup_title" = "Обрані Вами Фотографії Готові до Друку";
+"send_print_popup_address" = "Роздруковані фотографії будуть відправлені за адресою \"%@ Квартал %@ Вулиця №:%@ Квартира:%@ %@/%@, %d\".";
+"send_print_popup_info" = "Після надсилання на друк цей процес не можна скасувати.";
+"address_title" = "Назва Адреси";
+"address_city" = "Город";
+"address_district" = "Район";
+"address_neighbourhood" = "Квартал";
+"address_street" = "Проспект/Вулиця";
+"address_building_no" = "Будинок №";
+"address_apartment_no" = "Квартира №";
+"address_postacode" = "Поштовий Індекс";
+"add_saved_my_address" = "Додати в мої збережені адреси.";
+"save_address" = "Зберегти Адресу";
+"update_address" = "Редагувати Адресу";
+"use_address" = "Використовувати Адресу";
+"change_address" = "Змінити Адресу";
+"sent_print_info_popup_title" = "Ваші Фотографії Відправлені На Друк.";
+"sent_print_info_popup_body" = "Ваше замовлення перебуває в процесі підготовки. Ви можете простежити за виконанням замовлення з деталізації замовлення.";
+"address_title_placeholder" = "Приклад: Мій Дім, Моя Робота і т.д.";
+"select_city_district" = "Вибрати";
+"send_print_popup_no_address" = "У вас немає збереженої адреси.";
+"grace_banner_text_paycell" = "Щоб оновити пакет lifebox, перевірте баланс своєї картки Paycell і переконайтеся, що вона відкрита для електронної торгівлі. Ви можете придбати пакет за допомогою іншої кредитної картки або через додаток.";
 "toast_message_delete_notification" = "Цей процес може зайняти певний час, залежно від кількості вибраних файлів.";
-"order_approved" = "";
+"order_approved" = "Ваше Замовлення Підтверджено";
+"print_card_title" = "Спеціальний Пакет Друку Для Вас";
+"print_card_body" = "5 роздруківок фотографій на місяць + 50 ГБ дискового простору в подарунок";
+"order_in_progress" = "Ваше Замовлення Готується";
+"order_delivered_cargo" = "Ваше Замовлення Відправлено";
+"order_delivered" = "Ваше Замовлення Доставлено";
+"order_undelivered" = "Не Вдалося Доставити Ваше Замовлення";
+"grace_banner_paycell_text" = "";
+"order_detail_popup_name" = "Відстеження Замовлення на Друк";
+"print_order_number" = "Номер Замовлення: %@";
+"print_cargo_number" = "Номер Доставки Замовлення: %@";
+"print_cargo_name" = "Назва Служби Доставки: %@";
+"order_approved_detail" = "Ваше замовлення на друк надійшло на підготовку.";
+"order_in_progress_detail" = "Ваше замовлення на друк перейшло в стадію виготовлення.";
+"order_delivered_cargo_detail" = "Ваше замовлення на друк було передано до служби доставки.";
+"order_delivered_detail" = "Ваше замовлення на друк доставлено.";
+"order_undelivered_detail" = "Ваше замовлення на друк не вдалося доставити.";
+"print_receipt_name" = "";
+"print_receipt_name_placeholder" = "";
+"min_posta_code" = "";
+"errorcode_5111" = "";
