--- a/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
@@ -2157,3 +2157,23 @@ then {11,99 TRY/Month}*/
 "grace_banner_text_paycell" = "";
 "toast_message_delete_notification" = "ამ პროცესს შეიძლება დასჭირდეს დრო, დამოკიდებულია არჩეული ფაილების რაოდენობაზე.";
 "order_approved" = "";
+"print_card_title" = "";
+"print_card_body" = "";
+"order_in_progress" = "";
+"order_delivered_cargo" = "";
+"order_delivered" = "";
+"order_undelivered" = "";
+"grace_banner_paycell_text" = "";
+"order_detail_popup_name" = "";
+"print_order_number" = "";
+"print_cargo_number" = "";
+"print_cargo_name" = "";
+"order_approved_detail" = "";
+"order_in_progress_detail" = "";
+"order_delivered_cargo_detail" = "";
+"order_delivered_detail" = "";
+"order_undelivered_detail" = "";
+"print_receipt_name" = "";
+"print_receipt_name_placeholder" = "";
+"min_posta_code" = "";
+"errorcode_5111" = "";
