--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2147,29 +2147,49 @@ then {11,99 TRY/Month}*/
 "print_cancel_popup_info" = "Все фотографии, выбранные для печатного альбома, будут удалены. Вам придется выбирать и редактировать фотографии заново.";
 "no_right_print_popup_title" = "Вы использовали Право на Печать";
 "no_right_print_popup_info" = "Вы использовали право на печать фотографий, включенное в ваш пакет. Когда пакет будет обновлен, вы сможете снова отправить свои фотографии на печать.";
-"send_print_button" = "";
-"add_address" = "";
-"send_print_popup_title" = "";
-"send_print_popup_address" = "";
-"send_print_popup_info" = "";
-"address_title" = "";
-"address_city" = "";
-"address_district" = "";
-"address_neighbourhood" = "";
-"address_street" = "";
-"address_building_no" = "";
-"address_apartment_no" = "";
-"address_postacode" = "";
-"add_saved_my_address" = "";
-"save_address" = "";
-"update_address" = "";
-"use_address" = "";
-"change_address" = "";
-"sent_print_info_popup_title" = "";
-"sent_print_info_popup_body" = "";
-"address_title_placeholder" = "";
-"select_city_district" = "";
-"send_print_popup_no_address" = "";
-"grace_banner_text_paycell" = "";
+"send_print_button" = "Отправить на Печать";
+"add_address" = "Добавить Адрес";
+"send_print_popup_title" = "Выбранные Вами Фотографии Готовы к Печати";
+"send_print_popup_address" = "Распечатанные фотографии будут отправлены по адресу \"%@ Квартал %@ Улица №:%@ Квартира:%@ %@/%@, %d\".";
+"send_print_popup_info" = "После отправки на печать этот процесс нельзя отменить.";
+"address_title" = "Название Адреса";
+"address_city" = "Город";
+"address_district" = "Район";
+"address_neighbourhood" = "Квартал";
+"address_street" = "Проспект/Улица";
+"address_building_no" = "Дом №";
+"address_apartment_no" = "Квартира №";
+"address_postacode" = "Почтовый Индекс";
+"add_saved_my_address" = "Добавить в сохраненные адреса.";
+"save_address" = "Сохранить Адрес";
+"update_address" = "Редактировать Адрес";
+"use_address" = "Использовать Адрес";
+"change_address" = "Изменить Адрес";
+"sent_print_info_popup_title" = "Ваши Фотографии Отправлены На Печать.";
+"sent_print_info_popup_body" = "Ваш заказ находится в процессе подготовки. Вы можете проследить за выполнением заказа из детализации заказа.";
+"address_title_placeholder" = "Пример, Мой Дом, Моя Работа и т.д.";
+"select_city_district" = "Выбрать";
+"send_print_popup_no_address" = "У вас нет сохраненного адреса.";
+"grace_banner_text_paycell" = "Чтобы обновить пакет lifebox, проверьте баланс своей карты Paycell и убедитесь, что она открыта для электронной торговли. Вы можете приобрести пакет с помощью другой кредитной карты или через приложение.";
 "toast_message_delete_notification" = "Этот процесс может занять некоторое время в зависимости от количества выбранных файлов.";
-"order_approved" = "";
+"order_approved" = "Ваш Заказ Одобрен";
+"print_card_title" = "Специальный Пакет Печати Для Вас";
+"print_card_body" = "5 распечаток фотографий в месяц + 50 ГБ дискового пространства в подарок";
+"order_in_progress" = "Ваш Заказ в Процессе Выполнения";
+"order_delivered_cargo" = "Ваш Заказ Отправлен";
+"order_delivered" = "Ваш Заказ Доставлен";
+"order_undelivered" = "Не Удалось Доставить Ваш Заказ";
+"grace_banner_paycell_text" = "";
+"order_detail_popup_name" = "Отслеживание Заказа на Печать";
+"print_order_number" = "Номер Заказа: %@";
+"print_cargo_number" = "Номер Доставки Заказа: %@";
+"print_cargo_name" = "Название Компании по Доставке: %@";
+"order_approved_detail" = "Ваш заказ на печать поступил на подготовку.";
+"order_in_progress_detail" = "Ваш заказ на печать перешел в стадию изготовления.";
+"order_delivered_cargo_detail" = "Ваш заказ на печать отправлен в карго для доставки.";
+"order_delivered_detail" = "Ваш заказ на печать доставлен.";
+"order_undelivered_detail" = "Ваш заказ на печать доставить не удалось.";
+"print_receipt_name" = "";
+"print_receipt_name_placeholder" = "";
+"min_posta_code" = "";
+"errorcode_5111" = "";
